Revision history for WWW::Mechanize

Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users

[TESTS]

Update t/local/back.t to use LocalServer for 404 checking to avoid fails
on win32. Fix by Matt S Trout, patient diagnostics and testing provided
by jayefuu of freenode #perl

[CHANGES]

1.72        Thu Feb  2 18:37:28 EST 2012
========================================
[DEPENDENCIES]
Bumped the HTML::Form dependency to fix failures on CentOS 5



1.71        Tue Nov 14 13:50:41 EDT 2011
========================================
[ENHANCEMENTS]
Recognise application/xhtml+xml as HTML.

[DOCUMENTATION]
Improved docs about support of JavaScript
Typo fixes.

[TESTS]
Updated tests as oops-music.com is in utf-8 now

1.70        Fri Aug 26 13:46:30 EDT 2011
========================================
[ENHANCEMENTS]
Mech now defaults to _not_ running live tests by default.
You can still enable them by running "perl Makefile.PL --live"
Thanks to RJBS for the suggestion

1.69_01
========================================
[INTERNALS]
The test suite for the local tests was updated

1.68        Fri Apr 22 01:10:40 EST 2011
========================================
No changes from 1.67_01

1.67_01
========================================
[ANNOUNCE]
As of this release, Jesse Vincent has taken over maintenance of
WWW-Mechanize.  The project's repository can be found at:

 https://github.com/bestpractical/www-mechanize


[FIXED]
Added prereq for HTML::TreeBuilder.


1.66        Fri Sep 10 16:25:44 CDT 2010
========================================
[FIXED]
Fixed prerequisites on HTTP::Server::Simple on Windows.

DNS checks in t/autocheck.t and t/local/failure.t improved.  Thanks,
Schwern.

[ENHANCEMENTS]
New $mech->text method returns the text from your HTML page.  The
exact rendering of this text is simply removing all the HTML
tags, but this will change. It's pretty ugly.  If anyone wants to